--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
+    "next-auth": "^4.24.11",
     "nodemailer": "^7.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
