--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "antd": "^5.26.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "country-state-city": "^3.2.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.0",
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
