--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "@sparticuz/chromium": "^138.0.1",
     "antd": "^5.26.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
@@ -22,6 +23,7 @@
     "nodemailer": "^6.9.0",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.12.1",
+    "puppeteer-core": "^24.12.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
