--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "country-state-city": "^3.2.1",
+    "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
-    "nodemailer": "^6.9.0",
+    "nodemailer": "^6.10.1",
     "pdfkit": "^0.17.1",
     "puppeteer": "^24.12.1",
     "puppeteer-core": "^24.12.1",
