tile for blogs and reports

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "country-state-city": "^3.2.1",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.539.0",
     "moment": "^2.30.1",
     "mongoose": "^8.14.1",
     "next": "^15.3.1",
