--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
-    "swiper": "^11.2.6"
+    "swiper": "^11.2.6",
+    "use-debounce": "^10.0.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
