--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
     "@sparticuz/chromium": "^138.0.1",
+    "animate.css": "^4.1.1",
     "antd": "^5.26.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
