--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "country-state-city": "^3.2.1",
+    "dompurify": "^3.2.6",
     "formidable": "^3.5.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
