--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "puppeteer": "^24.12.1",
     "puppeteer-core": "^24.12.1",
     "react": "^19.1.0",
+    "react-country-region-selector": "^4.0.3",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
